--- a/WebRoot/html/account/pswd.html
+++ b/WebRoot/html/account/pswd.html
@@ -14,10 +14,10 @@
 	<script>
 	$("#submitModify").click(function(){
 		/**修改账户密码**/
-		if($.idcode.validateCode()){
+		if(valideForm()&&$.idcode.validateCode()){
 			modifyPword();
 		}
-		else{
+		else if(!$.idcode.validateCode()){
 			  var txt="验证码错误，请输入正确的验证码。";
 				var option={
   	   					title: "提示",
@@ -40,7 +40,9 @@
 			}
 		});
 
-		$("#pswdform").validate({
+	}) ;
+	function valideForm(){
+		return $("#pswdform").validate({
 			rules: {
 				newpassword: {
 					required: true,
@@ -53,9 +55,6 @@
 				password: {
 					required: true
 				},
-				valid:{
-					required: true
-				}
 			},
 			messages: {
 				newpassword: {
@@ -68,12 +67,9 @@
 				password: {
 					required: "请输入当前账户密码"
 				},
-				valid:{
-					required: "请输入验证码"
-				}
 			}
-		});	
-	}) ;
+		}).form();	
+	}
 	/***AES加密***/
 	function Encrypt(word){
 	    var key = CryptoJS.enc.Utf8.parse("fiberMonitorSyst");
@@ -148,6 +144,7 @@
 	<style>
 		.error {
 			color: red;
+			margin-left:210px;
 		}
 	</style>
 </head>
@@ -158,7 +155,7 @@
 		<div class="currentnamediv">
 			<p class="currentname">当前用户：admin</p>
 		</div>
-		<form id="pswdform" class="pswdform" action="" method="post">
+		<form id="pswdform" class="pswdform" action="javascript:void(0)" method="post">
 			<fieldset style="border: 2px groove threedface; padding: 5px">
 				<legend style="display: block; width: 90px; font-size: 20px">修改密码</legend>
 				<p>
