修改自动生成光路方式，严格按照用户下发的拓扑

--- a/WebRoot/html/resource/routeParaSet.html
+++ b/WebRoot/html/resource/routeParaSet.html
@@ -64,11 +64,11 @@
 <body>
    	<div class="sidebarContent">
    	    <div class="routeParaBar" style="height:430px;">
-            <div class="sidebarTitle" id="move" onmousedown="toMoveBar(event,this.parentNode)" onmouseup="toStopBar(event)">
+            <div class="sidebarTitle" style="-webkit-user-select:none;user-select:none;cursor:pointer" id="move" onmousedown="toMoveBar(event,this.parentNode)" onmouseup="toStopBar(event)">
                 <span>光路参数设置</span>
                 <span class="sidebar_close" ><img src="../../images/close.png" alt="close"/></span>
             </div>
-            <div class="funcName">
+            <div class="funcName" style="-webkit-user-select:none;user-select:none;cursor:pointer">
                 <p style="margin-top:1px">光路路由</p>
                 <p>光路名称</p>
                 <p>光路状态</p>
