--- a/WebRoot/html/resource/selectRoute.html
+++ b/WebRoot/html/resource/selectRoute.html
@@ -97,7 +97,7 @@ function toStop(oEvent){
 <body>
   <div class="sidebarContent routebarContent" id="routebarContent">
 		<div class="sidebar" style="height:430px">
-        	<div class="sidebarTitle" style="-webkit-user-select:none;user-select:none;" id="move" onmousedown="toMove(event,this.parentNode)" onmouseup="toStop(event)">
+        	<div class="sidebarTitle" style="-webkit-user-select:none;user-select:none;cursor:pointer" id="move" onmousedown="toMove(event,this.parentNode)" onmouseup="toStop(event)">
 	            <span>选择光路</span>
 	            <span class="sidebar_close"><img src="../../images/close.png" alt="close"/></span>
         	</div>
